[gd_scene load_steps=48 format=3 uid="uid://cnpd0p1q0o4yl"]

[ext_resource type="Script" path="res://scenes/npc/boss/boss_zombie_chain.gd" id="1_ctjcq"]
[ext_resource type="Texture2D" uid="uid://dvgte366isygn" path="res://assets/monsters/sylas_idle.png" id="2_20uwx"]
[ext_resource type="Texture2D" uid="uid://v0rmsd4rsne0" path="res://assets/monsters/va_explotar.png" id="2_dvd7y"]
[ext_resource type="Texture2D" uid="uid://d3iti3840h3dg" path="res://assets/monsters/die_animations.png" id="2_hotf5"]
[ext_resource type="Script" path="res://script/finite_state_machine.gd" id="2_muh8e"]
[ext_resource type="Texture2D" uid="uid://cvts0jvevwrcd" path="res://assets/monsters/chain_spin_sheet.png" id="3_ckcq3"]
[ext_resource type="Script" path="res://scenes/npc/boss/chain_idle_state.gd" id="4_8i7pj"]
[ext_resource type="Texture2D" uid="uid://nqj0w0qx28dr" path="res://assets/monsters/chain_explote.png" id="5_jhv7g"]
[ext_resource type="Script" path="res://scenes/npc/boss/spin_attack_state.gd" id="5_knhe3"]
[ext_resource type="Texture2D" uid="uid://b6ux88vkv5p4x" path="res://assets/monsters/tirar_cadena.png" id="5_mse3h"]
[ext_resource type="Script" path="res://scenes/npc/boss/hook_attack_state.gd" id="6_b71oi"]
[ext_resource type="Script" path="res://scenes/npc/boss/explosion_state.gd" id="7_6nwci"]
[ext_resource type="PackedScene" uid="uid://dvs1xlv8krpj5" path="res://scenes/history/misiones/cadena.tscn" id="7_vgdon"]
[ext_resource type="Script" path="res://scenes/npc/boss/chain_die_state.gd" id="8_eoaos"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hwo0d"]
radius = 6.0
height = 18.0

[sub_resource type="AtlasTexture" id="AtlasTexture_wrgbe"]
atlas = ExtResource("2_hotf5")
region = Rect2(0, 400, 83, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xwam"]
atlas = ExtResource("2_hotf5")
region = Rect2(83, 400, 83, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sd6e"]
atlas = ExtResource("2_hotf5")
region = Rect2(166, 400, 83, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lmlw"]
atlas = ExtResource("2_hotf5")
region = Rect2(249, 400, 83, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_oi5k6"]
atlas = ExtResource("2_hotf5")
region = Rect2(332, 400, 83, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7f4rg"]
atlas = ExtResource("2_hotf5")
region = Rect2(415, 400, 83, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_eu7ef"]
atlas = ExtResource("2_dvd7y")
region = Rect2(0, 0, 29, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgm0s"]
atlas = ExtResource("5_mse3h")
region = Rect2(0, 0, 29, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_8p07t"]
atlas = ExtResource("2_20uwx")
region = Rect2(0, 0, 29, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_oub4a"]
atlas = ExtResource("2_20uwx")
region = Rect2(29, 0, 29, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_08xik"]
atlas = ExtResource("2_20uwx")
region = Rect2(58, 0, 29, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_tramv"]
atlas = ExtResource("2_20uwx")
region = Rect2(87, 0, 29, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_aux8w"]
atlas = ExtResource("2_20uwx")
region = Rect2(116, 0, 29, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gf65"]
atlas = ExtResource("2_20uwx")
region = Rect2(145, 0, 29, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_nislk"]
atlas = ExtResource("2_20uwx")
region = Rect2(174, 0, 29, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxhay"]
atlas = ExtResource("2_20uwx")
region = Rect2(203, 0, 29, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mow2"]
atlas = ExtResource("2_20uwx")
region = Rect2(232, 0, 29, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmge0"]
atlas = ExtResource("2_20uwx")
region = Rect2(261, 0, 29, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_78n6b"]
atlas = ExtResource("2_20uwx")
region = Rect2(290, 0, 29, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_oak70"]
atlas = ExtResource("2_20uwx")
region = Rect2(319, 0, 29, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_luyxd"]
atlas = ExtResource("2_20uwx")
region = Rect2(348, 0, 29, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_hr244"]
atlas = ExtResource("3_ckcq3")
region = Rect2(0, 0, 84, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdyqn"]
atlas = ExtResource("3_ckcq3")
region = Rect2(84, 0, 84, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_kp5nk"]
atlas = ExtResource("3_ckcq3")
region = Rect2(168, 0, 84, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_eewu0"]
atlas = ExtResource("3_ckcq3")
region = Rect2(252, 0, 84, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbsd0"]
atlas = ExtResource("5_jhv7g")
region = Rect2(0, 0, 29, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_pyws0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrgbe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xwam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sd6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lmlw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oi5k6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7f4rg")
}],
"loop": false,
"name": &"death",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eu7ef")
}],
"loop": true,
"name": &"exploto",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgm0s")
}],
"loop": true,
"name": &"hook",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8p07t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oub4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08xik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tramv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aux8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gf65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nislk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxhay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mow2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmge0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78n6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oak70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_luyxd")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hr244")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdyqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kp5nk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eewu0")
}],
"loop": true,
"name": &"spin",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbsd0")
}],
"loop": true,
"name": &"va_explotar",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_yucgt"]
radius = 15.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ljvto"]
radius = 15.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lsxdj"]
bg_color = Color(0.465194, 0.0956877, 1.44392e-07, 1)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cuh3u"]
bg_color = Color(0.756029, 0.567209, 1.92523e-07, 1)
shadow_size = 3

[sub_resource type="CircleShape2D" id="CircleShape2D_r5kto"]
radius = 45.5412

[node name="BossZombieChain" type="CharacterBody2D" node_paths=PackedStringArray("animator")]
collision_layer = 5
collision_mask = 3
script = ExtResource("1_ctjcq")
max_speed = 300.0
animator = NodePath("AnimatedSprite2D")
is_invulnerable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_hwo0d")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_pyws0")
animation = &"idle"

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("2_muh8e")
state = NodePath("ChainIdleState")

[node name="ChainIdleState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("4_8i7pj")
actor = NodePath("../..")

[node name="SpinAttackState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "vision_cast")]
script = ExtResource("5_knhe3")
actor = NodePath("../..")
vision_cast = NodePath("../../RayCast2D")

[node name="HookAttackState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "vision_cast")]
script = ExtResource("6_b71oi")
actor = NodePath("../..")
vision_cast = NodePath("../../RayCast2D")
chain_scene = ExtResource("7_vgdon")

[node name="ExplosionState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("7_6nwci")
actor = NodePath("../..")

[node name="ChainDieState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("8_eoaos")
actor = NodePath("../..")

[node name="AreaEntraDa単o" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaEntraDa単o"]
shape = SubResource("CircleShape2D_yucgt")

[node name="AreaaDa単oPlayer" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaaDa単oPlayer"]
shape = SubResource("CapsuleShape2D_ljvto")

[node name="makeDamage" type="Timer" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="Label" type="Label" parent="."]
offset_left = -19.0
offset_top = 21.0
offset_right = 21.0
offset_bottom = 35.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -117.0
offset_top = -39.0
offset_right = 117.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 8
theme_override_styles/background = SubResource("StyleBoxFlat_lsxdj")
theme_override_styles/fill = SubResource("StyleBoxFlat_cuh3u")
value = 50.0

[node name="Explosion" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Explosion"]
shape = SubResource("CircleShape2D_r5kto")
disabled = true

[connection signal="area_entered" from="AreaEntraDa単o" to="." method="_on_area_entra_da単o_area_entered"]
[connection signal="body_entered" from="AreaaDa単oPlayer" to="." method="_on_areaa_da単o_player_body_entered"]
[connection signal="body_exited" from="AreaaDa単oPlayer" to="." method="_on_areaa_da単o_player_body_exited"]
[connection signal="timeout" from="makeDamage" to="." method="_on_make_damage_timeout"]
[connection signal="body_entered" from="Explosion" to="." method="_on_explosion_body_entered"]
